# legal-video-finder

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: tests.yml
data/: custom_sources.example.json  legal_catalog.json
docs/: ARCHITECTURE.md  REQUIREMENTS.md
scripts/: run_app.ps1  verify.ps1
src/legal_video_finder/: __init__.py  app.py  http_client.py  models.py  providers.py  search.py  store.py  utils.py
tests/: test_core.py
